--- a/secretBlogBoot-admin/src/main/resources/templates/pages/system/setup-edit.html
+++ b/secretBlogBoot-admin/src/main/resources/templates/pages/system/setup-edit.html
@@ -12,6 +12,7 @@
     <!--form表单-->
     <form class="layui-form layui-form-pane ok-form" lay-filter="example">
         <div class="layui-form-item">
+            <input type="hidden" id="id" name="id" />
             <label class="layui-form-label">配置名称</label>
             <div class="layui-input-block">
                 <input type="text" name="configName" placeholder="请输入配置名称" autocomplete="off" class="layui-input"
@@ -70,11 +71,14 @@
             birthdayVerify: [/^((((1[6-9]|[2-9]\d)\d{2})-(0?[13578]|1[02])-(0?[1-9]|[12]\d|3[01]))|(((1[6-9]|[2-9]\d)\d{2})-(0?[13456789]|1[012])-(0?[1-9]|[12]\d|30))|(((1[6-9]|[2-9]\d)\d{2})-0?2-(0?[1-9]|1\d|2[0-8]))|(((1[6-9]|[2-9]\d)(0[48]|[2468][048]|[13579][26])|((16|[2468][048]|[3579][26])00))-0?2-29-))(\s(([01]\d{1})|(2[0123])):([0-5]\d):([0-5]\d))?$/, '日期格式不正确']
         });
 
+
+
         let id=okUtils.location.getRequestByKey("id");
         okUtils.ajax("/sysConfig/selectById", "post", {id:id}, true).done(function (response) {//查看数据详情
 
             form.val('example', {
-                "configName": response.data.configName
+                "id": response.data.id
+                ,"configName": response.data.configName
                 ,"configType": response.data.configType
                 ,"configCode": response.data.configCode
                 ,"configValue": response.data.configValue
@@ -90,7 +94,7 @@
             console.log(data);
             okUtils.ajax("/sysConfig/edit", "post", data.field, true).done(function (response) {
                 console.log(response);
-                okLayer.greenTickMsg("修改成功", function () {
+                okLayer.greenTickMsg(response.message, function () {
                     parent.layer.close(parent.layer.getFrameIndex(window.name));
                 });
             }).fail(function (error) {
