--- a/secretBlogBoot-admin/src/main/resources/templates/pages/system/user-edit.html
+++ b/secretBlogBoot-admin/src/main/resources/templates/pages/system/user-edit.html
@@ -10,7 +10,8 @@
 <body>
 <div class="ok-body">
 	<!--form表单-->
-	<form class="layui-form ok-form" lay-filter="filter">
+	<form class="layui-form ok-form" lay-filter="filter" >
+		<input type="hidden" id="id" name="id">
 		<div class="layui-form-item">
 			<label class="layui-form-label">用户名</label>
 			<div class="layui-input-block">
@@ -18,19 +19,8 @@
 				       lay-verify="required">
 			</div>
 		</div>
-		<div class="layui-form-item">
-			<label class="layui-form-label">姓名</label>
-			<div class="layui-input-block">
-				<input type="text" name="name" placeholder="请输入真实姓名" autocomplete="off" class="layui-input"
-				       lay-verify="required">
-			</div>
-		</div>
-		<div class="layui-form-item">
-			<label class="layui-form-label">手机号码</label>
-			<div class="layui-input-block">
-				<input type="text" name="phone" placeholder="请输入手机号码" autocomplete="off" class="layui-input" lay-verify="phone">
-			</div>
-		</div>
+
+
 		<div class="layui-form-item">
 			<label class="layui-form-label">邮箱</label>
 			<div class="layui-input-block">
@@ -40,51 +30,24 @@
 		<div class="layui-form-item">
 			<label class="layui-form-label">密码</label>
 			<div class="layui-input-block">
-				<input type="password" name="password" placeholder="请输入密码" autocomplete="off" class="layui-input"
-				       lay-verify="required">
+				<input type="password" name="password" placeholder="请输入密码,若不输入，则默认不修改密码" autocomplete="off" class="layui-input">
+				<input type="hidden" id="oldPassword" name="oldPassword">
 			</div>
 		</div>
-		<div class="layui-form-item">
-			<label class="layui-form-label">出生日期</label>
-			<div class="layui-input-block">
-				<input type="text" name="createTime" placeholder="请选择出生日期 格式为yyyy-MM-dd HH:mm:ss" autocomplete="off"
-				       class="layui-input" id="birthday" lay-verify="birthdayVerify">
-			</div>
-		</div>
+
 		<div class="layui-form-item">
 			<label class="layui-form-label">角色</label>
 			<div class="layui-input-block">
-				<select name="role">
-					<option value="0">管理员</option>
-					<option value="1">普通用户</option>
+				<select id="roleSelect" name="roleId">
+					<option value="">--数据加载中--</option>
 				</select>
 			</div>
 		</div>
-		<div class="layui-form-item">
-			<label class="layui-form-label">兴趣</label>
-			<div class="layui-input-block">
-				<input type="checkbox" name="like[write]" value="1" title="写作">
-				<input type="checkbox" name="like[read]" value="2" title="阅读">
-				<input type="checkbox" name="like[run]" value="3" title="运动">
-			</div>
-		</div>
+
 		<div class="layui-form-item">
 			<label class="layui-form-label">状态</label>
 			<div class="layui-input-block">
 				<input type="checkbox" name="status" lay-skin="switch" lay-text="启用|停用" checked value="0">
-			</div>
-		</div>
-		<div class="layui-form-item">
-			<label class="layui-form-label">性别</label>
-			<div class="layui-input-block">
-				<input type="radio" name="sex" value="0" title="男">
-				<input type="radio" name="sex" value="1" title="女" checked>
-			</div>
-		</div>
-		<div class="layui-form-item layui-form-text">
-			<label class="layui-form-label">备注</label>
-			<div class="layui-input-block">
-				<textarea name="remarks" placeholder="请输入内容" class="layui-textarea"></textarea>
 			</div>
 		</div>
 		<div class="layui-form-item">
@@ -105,11 +68,12 @@
 		initData = JSON.parse(jsonString);
 	}
 
-	layui.use(["element", "form", "laydate", "okLayer", "okUtils"], function () {
+	layui.use(["element", "form", "laydate", "okLayer", "okUtils","jquery"], function () {
 		let form = layui.form;
 		let laydate = layui.laydate;
 		let okLayer = layui.okLayer;
 		let okUtils = layui.okUtils;
+		let $=layui.jquery;
 		okLoading.close();
 		form.val("filter", initData);
 
@@ -119,8 +83,44 @@
 			birthdayVerify: [/^((((1[6-9]|[2-9]\d)\d{2})-(0?[13578]|1[02])-(0?[1-9]|[12]\d|3[01]))|(((1[6-9]|[2-9]\d)\d{2})-(0?[13456789]|1[012])-(0?[1-9]|[12]\d|30))|(((1[6-9]|[2-9]\d)\d{2})-0?2-(0?[1-9]|1\d|2[0-8]))|(((1[6-9]|[2-9]\d)(0[48]|[2468][048]|[13579][26])|((16|[2468][048]|[3579][26])00))-0?2-29-))(\s(([01]\d{1})|(2[0123])):([0-5]\d):([0-5]\d))?$/, '日期格式不正确']
 		});
 
+
+		okUtils.ajax("/sysRole/alllist", "post", null, true).done(function (response) {
+			var html = '';
+			if (response.status==200) {
+				$("#roleSelect").html("");
+				roles = response.data;
+				html += "<option value=''></option>";
+				for(i = 0 ; i < roles.length ; i++ ){
+					html += "<option value='"+roles[i].id+"'>"+roles[i].rolename+"</option>";
+				}
+				$("#roleSelect").html(html);
+			}
+			form.render('select');
+
+		}).fail(function (error) {
+			console.log(error)
+		});
+
+
+
+        let id=okUtils.location.getRequestByKey("id");
+        okUtils.ajax("/sysUser/selectById", "post", {id:id}, true).done(function (response) {//查看数据详情
+
+            form.val('filter', {
+                "id": response.data.id
+                ,"username": response.data.username
+                ,"oldPassword": response.data.password
+                ,"email": response.data.email
+                ,"status":response.data.status==1?"selected":"false"
+				,"roleId":response.data.roleId
+            });
+
+        }).fail(function (error) {
+            console.log(error);
+        });
+
 		form.on("submit(edit)", function (data) {
-			okUtils.ajax("/user/updateUser", "put", data.field, true).done(function (response) {
+			okUtils.ajax("/sysUser/edit", "put", data.field, true).done(function (response) {
 				console.log(response);
 				okLayer.greenTickMsg("编辑成功", function () {
 					parent.layer.close(parent.layer.getFrameIndex(window.name));
@@ -130,6 +130,8 @@
 			});
 			return false;
 		});
+
+
 	})
 </script>
 </body>
