--- a/secretBlogBoot-admin/src/main/resources/templates/pages/system/user.html
+++ b/secretBlogBoot-admin/src/main/resources/templates/pages/system/user.html
@@ -52,15 +52,14 @@
 			},
 			cols: [[
 				{type: "checkbox", fixed: "left"},
-				{field: "id", title: "ID", width: 160, sort: true},
+				{field: "id", title: "id", width: 60, sort: true},
 				{field: "username", title: "账号", width: 100},
-				{field: "password", title: "密码", width: 100},
 				{field: "sysRole", title: "角色", width: 100, templet: "#roleTpl"},
 				{field: "status", title: "状态", width: 100, templet: "#statusTpl"},
-				{field: "email", title: "邮箱", width: 200},
-				{field: "logins", title: "登陆次数", width: 100},
-				{field: "createTime", title: "创建时间", width: 150},
-				{field: "updateTime", title: "更新时间", width: 150},
+				{field: "email", title: "邮箱", width: 180},
+				{field: "loginNum", title: "登陆次数", width: 100},
+				{field: "createTime", title: "创建时间", width: 160},
+				{field: "updateTime", title: "更新时间", width: 160},
 				{title: "操作", width: 100, align: "center", fixed: "right", templet: "#operationTpl"}
 			]],
 			done: function (res, curr, count) {
@@ -109,7 +108,7 @@
 			let data = obj.data;
 			switch (obj.event) {
 				case "edit":
-					edit(data);
+					edit(data.id);
 					break;
 				case "del":
 					del(data.id);
@@ -152,9 +151,9 @@
 				layer.close(index);
 				let idsStr = okUtils.tableBatchCheck(table);
 				if (idsStr) {
-					okUtils.ajax("/user/deleteUser", "delete", {idsStr: idsStr}, true).done(function (response) {
+					okUtils.ajax("/sysUser/del", "get", {ids: idsStr}, true).done(function (response) {
 						console.log(response);
-						okUtils.tableSuccessMsg(response.msg);
+						okUtils.tableSuccessMsg(response.message);
 					}).fail(function (error) {
 						console.log(error)
 					});
@@ -168,10 +167,10 @@
 			})
 		}
 
-		function edit(data) {
-			okLayer.open("更新用户", "user-edit.html", "90%", "90%", function (layero) {
+		function edit(id) {
+			okLayer.open("更新用户", "user-edit?id="+id, "90%", "90%", function (layero) {
 				let iframeWin = window[layero.find("iframe")[0]["name"]];
-				iframeWin.initForm(data);
+				iframeWin.initForm(id);
 			}, function () {
 				userTable.reload();
 			})
@@ -179,9 +178,9 @@
 
 		function del(id) {
 			okLayer.confirm("确定要删除吗？", function () {
-				okUtils.ajax("/user/deleteUser", "delete", {idsStr: id}, true).done(function (response) {
+				okUtils.ajax("/sysUser/del", "get", {ids: id}, true).done(function (response) {
 					console.log(response);
-					okUtils.tableSuccessMsg(response.msg);
+					okUtils.tableSuccessMsg(response.message);
 				}).fail(function (error) {
 					console.log(error)
 				});
