完成文章类别管理，文章标签管理，更新sql文件

--- a/secretBlogBoot-admin/src/main/resources/templates/pages/content/photo.html
+++ b/secretBlogBoot-admin/src/main/resources/templates/pages/content/photo.html
@@ -208,7 +208,7 @@
 
         //进入上传配置页面
         $('.uploadConfig').click(function(){
-            okLayer.open("添加图片", "photo-config", "90%", "90%", null, function () {
+            okLayer.open("相册配置", "photo-config", "90%", "90%", null, function () {
 
             })
         });
