可视化代码生成

--- a/secretBlogBoot-admin/src/main/resources/templates/pages/system/permission-add.html
+++ b/secretBlogBoot-admin/src/main/resources/templates/pages/system/permission-add.html
@@ -22,14 +22,14 @@
             <label class="layui-form-label">权限路径</label>
             <div class="layui-input-block">
                 <input type="text" name="href" placeholder="请输入权限路径" autocomplete="off" class="layui-input"
-                       lay-verify="required">
+                       >
             </div>
         </div>
         <div class="layui-form-item">
             <label class="layui-form-label">权限标识</label>
             <div class="layui-input-block">
                 <input type="text" name="code" placeholder="请输入权限标识" autocomplete="off" class="layui-input"
-                       lay-verify="required">
+                       >
             </div>
         </div>
         <div class="layui-form-item" >
@@ -78,6 +78,12 @@
             <label class="layui-form-label">状态</label>
             <div class="layui-input-block">
                 <input type="checkbox" name="status" lay-skin="switch" lay-text="启用|停用" checked value="0">
+            </div>
+        </div>
+        <div class="layui-form-item">
+            <label class="layui-form-label">排序编号</label>
+            <div class="layui-input-block">
+                <input type="text" name="sort" placeholder="请输入排序编号" autocomplete="off" class="layui-input" value="0">
             </div>
         </div>
         <div class="layui-form-item">
